--- a/dungeon.css
+++ b/dungeon.css
@@ -1151,31 +1151,69 @@ padding: 0.625rem; /* ~10px */
 
 /*////////////////////////////////////////////////////   TABS DIV - END  \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
 
+
+
+
+
+.detected.monster {
+    z-index: 5;
+    background: url('img/map/floor.png') left bottom no-repeat;
+    background-size: 32px 32px;
+}
+
+    .detected.monster img {
+        z-index: 50;
+        width: 32px;
+        height: 32px;
+        padding: 0;
+        padding-top: 2px;
+        margin: 0;
+        background: none; /* Default to no background */
+        filter: drop-shadow(0 0 0.1rem #cccccc90);
+    }
+
+    .detected.monster.has-hp-bar img {
+        background: url('img/1x1_red.png') left top no-repeat;
+    }
+
+.detected.monster.face-left img {
+    transform: rotateY(180deg);
+}
+
 /*////////////////////////////////////////////////////  PLAYER - START  \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
 
 .player {
     position: relative;
     transition: transform 0.016s linear; /* Smooth at ~60 FPS */
     display: inline-block;
-    background-image: url('img/map/floor.png');
-    background-size: 32px;
+    background: url('img/map/floor.png') left bottom no-repeat;
+    background-size: 32px 32px;
     transform-origin: center;
     z-index: 100 !important; /* Lift above other spans */
 }
 
     .player img {
+        z-index: 300;
         width: 32px;
-        height: 32px;
+        height: 28px;
         padding: 0;
+        padding-top: 4px;
         margin: 0;
+        margin-top: -4px;
+        background: none; /* Default to no background */
         filter: drop-shadow(0 0 0.1rem #cccccc90); /* Creates an evenly distributed outline */
-        /*
-       filter: drop-shadow(.0065rem 0 0 #88888868 ) drop-shadow(-.0065rem 0 #88888868) drop-shadow(0 .0065rem #88888868) drop-shadow(0 -.0065rem 0 #88888868) drop-shadow(.0065rem .0065rem 0 #88888868 ) drop-shadow(-.0065rem .0065rem 0 #88888868) drop-shadow(.0065rem -.0065rem 0 #88888868) drop-shadow(-.0065rem -.0065rem 0 #88888868);
-         */
     }
+
+    .player.face-left img {
+        transform: rotateY(180deg);
+    }
+
+.player.has-hp-bar img {
+    background: url('img/1x1_red.png') left top no-repeat;
+}
     
 .player.torch {
-background: rgba(139, 106, 75, 0.40);
+/*background: rgba(139, 106, 75, 0.40);*/
 border-radius: 50%;
 box-shadow: 0 0 4em 2em #8b6a4b74;
         
@@ -1629,6 +1667,7 @@ box-shadow: 0 0 5em 2.5em #efe8ac92;
     
 }
 .treasure img {
+    z-index: 10;
     position: absolute;
     bottom: 0;
     left: 4px;
