--- a/dungeon.css
+++ b/dungeon.css
@@ -498,7 +498,7 @@ overflow-y: hidden;
 display: flex;
 flex-direction:column;
 width: 100%;
-height: 28rem; /* Keep max height but let content dictate rows */
+height: 27rem; /* Keep max height but let content dictate rows */
 padding: 0.625rem; /* Outer padding */
 border: 0.125rem solid #0f0;
 border-radius: .625rem;
@@ -514,6 +514,11 @@ display: flex;
 margin-bottom: 0.3125rem; /* ~5px */
 line-height: 1.2;
 }
+
+
+
+
+
 
 #character-content {
 height: 30rem; /* ~400px */
@@ -859,6 +864,107 @@ li.new-save-game {
 }
 #about-data h4 {
     margin-top: 1.3125rem;
+}
+
+#journey-content {
+    height: 30rem; /* ~400px */
+    width: 100%;
+    display: flex; /* overwritten in line with none when hide is triggered*/
+    justify-content: space-between;
+}
+
+
+#journey {
+    display: flex;
+    flex-direction: column;
+    height: 31.75rem; /* ~400px */
+    width: 98%;
+    margin-top: 0.625rem; /* ~10px */
+}
+
+    #journey p {
+        display: flex;
+        margin-bottom: 0.3125rem; /* ~5px */
+        line-height: 1.2;
+    }
+
+
+/* Journey Tab Styles */
+#journey-window-wrapper {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 30rem; /* Keep max height but let content dictate rows */
+    border-radius: .625rem;
+    background: rgba(20, 30, 20, 0.7);
+}
+
+#journey-tabs {
+    padding: 0;
+    margin: 0;
+    -moz-border-radius: inherit;
+    -webkit-border-radius: inherit;
+    border-radius: inherit;
+    width: 100%;
+    height: 1.75rem;
+    display: flex;
+    align-content: flex-start;
+    gap: .325rem; /* ~5px */
+}
+
+    #journey-tabs button.tab {
+        padding: 0.125rem 0.625rem; /* ~2px 10px */
+        cursor: pointer;
+        margin: 0;
+        background: #2c672c;
+        color: #000;
+        border-bottom: none;
+        -moz-border-radius: 0px;
+        -webkit-border-radius: .325rem .325rem 0px 0px;
+        border-radius: .325rem .325rem 0px 0px;
+    }
+
+
+
+        #journey-tabs button.tab {
+            flex: 1;
+            margin: 0; /* Equal width for all tabs */
+        }
+
+        #journey-tabs button.active {
+            background: #0f0;
+        }
+
+#tabs #journey-items-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 0.625rem; /* ~5px */
+    width: 100%;
+    height: 27.25rem; /* Keep max height but let content dictate rows */
+    padding: 0.625rem; /* Outer padding */
+    border: 0.125rem solid #0f0;
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 0px 0px .625rem .625rem;
+    border-radius: 0px 0px .625rem .625rem;
+    overflow-y: auto;
+    scrollbar-color: #0f0 #111;
+    scrollbar-width: thin;
+    scrollbar-gutter: stable;
+    background: rgba(20, 30, 20, 0.7);
+}
+
+    #tabs #journey-items-wrapper p {
+        margin-bottom: 0.3125rem; /* ~5px */
+        line-height: 1.2;
+    }
+
+.journey-section {
+    margin-bottom: 20px;
+}
+
+.side-path {
+    margin-left: 20px;
+    margin-top: 10px;
 }
 
     #inventory {
