--- a/dungeon.css
+++ b/dungeon.css
@@ -13,6 +13,7 @@ body {
     font-size: 1rem;
     overflow: hidden;
     font-family: 'Verdana', Roboto, sans-serif;
+    user-select:none;
 }
 
 div {
